# mzj_ksa_zatca

./: README.md  pyproject.toml  requirements.txt  setup.py
ksa_zatca/: hooks.py  install.py  modules.txt
ksa_zatca/fatoora/: simplified.xml  standard.xml
ksa_zatca/ksa_zatca/custom/: address.json  company.json  customer.json  item_tax_template.json  packed_item.json  sales_invoice.json  sales_invoice_item.json
ksa_zatca/ksa_zatca/doctype/tax_exemption_reason/: tax_exemption_reason.js  tax_exemption_reason.json  tax_exemption_reason.py  test_tax_exemption_reason.py
ksa_zatca/ksa_zatca/doctype/zatca_config/: test_zatca_config.py  zatca_config.js  zatca_config.json  zatca_config.py  zatca_invoice.py  zatca_xml.py  zatca_xml_creation.py
ksa_zatca/ksa_zatca/doctype/zatca_config.o/: zatca_config.js  zatca_config.json  zatca_config.py
ksa_zatca/public/js/: sales_invoice.js
